cmake_minimum_required(VERSION 3.20)
project(DataStructuresAndAlgorithmsInCPP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(add_course_binary target source)
	add_executable(${target} ${source})
	target_compile_features(${target} PRIVATE cxx_std_20)
endfunction()

add_course_binary(dscpp1_starter "DSCPP1-Task-Manager-CLI/starter/main.cpp")
add_course_binary(dscpp1_solution "DSCPP1-Task-Manager-CLI/solution/main.cpp")
add_course_binary(dscpp2_starter "DSCPP2-Graph-Navigation/starter/main.cpp")
add_course_binary(dscpp2_solution "DSCPP2-Graph-Navigation/solution/main.cpp")
add_course_binary(dscpp3_starter "DSCPP3-Markov-Text-Generator/starter/main.cpp")
add_course_binary(dscpp3_solution "DSCPP3-Markov-Text-Generator/solution/main.cpp")
add_course_binary(dscpp4_starter "DSCPP4-Recursive-Maze-Pathfinder/starter/main.cpp")
add_course_binary(dscpp4_solution "DSCPP4-Recursive-Maze-Pathfinder/solution/main.cpp")
add_course_binary(dscpp5_starter "DSCPP5-Quicksort-Toolkit/starter/main.cpp")
add_course_binary(dscpp5_solution "DSCPP5-Quicksort-Toolkit/solution/main.cpp")
add_course_binary(dscpp6_starter "DSCPP6-Template-Linked-List/starter/main.cpp")
add_course_binary(dscpp6_solution "DSCPP6-Template-Linked-List/solution/main.cpp")
add_course_binary(dscpp7_starter "DSCPP7-Binary-Search-Tree/starter/main.cpp")
add_course_binary(dscpp7_solution "DSCPP7-Binary-Search-Tree/solution/main.cpp")
add_course_binary(dscpp8_starter "DSCPP8-AVL-Tree/starter/main.cpp")
add_course_binary(dscpp8_solution "DSCPP8-AVL-Tree/solution/main.cpp")
add_course_binary(dscpp9_starter "DSCPP9-Performance-Benchmarks/starter/main.cpp")
add_course_binary(dscpp9_solution "DSCPP9-Performance-Benchmarks/solution/main.cpp")

